--- a/Cherish/Bootstrap_Installation/index.html
+++ b/Cherish/Bootstrap_Installation/index.html
@@ -79,5 +79,42 @@
   <div class="container-fluid" style="background-color: teal;">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab molestiae ea, quam fugiat harum molestias maiores! Numquam pariatur incidunt quam, omnis blanditiis explicabo in molestiae voluptatum mollitia corrupti quas laudantium?
   </div>
+  <br>
+  <br>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="1000" data-pause="hover">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <img class="testimonial-dog" src="images/dog-img.jpg" alt="dog-profile">
+        <em>Pebbles, New York</em>
+      </div>
+      <div class="carousel-item">
+        <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+        <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+        <em>Beverly, Illinois</em>a
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <br>
+  <br>
+  <div class="card">
+    <div class="card-header">
+      Card Header
+    </div>
+    <div class="card-body">
+      Card Body
+    </div>
+    <div class="card-footer">
+      Card Footer
+    </div>
+  </div>
 </body>
 </html>
