Javascript and DOM manipulation

--- a/Cherish/Bootstrap_Installation/TinDog-Start-master/index.html
+++ b/Cherish/Bootstrap_Installation/TinDog-Start-master/index.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/ae1f1fb8b4.js" crossorigin="anonymous"></script>
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
